--- a/tes.html
+++ b/tes.html
@@ -419,10 +419,10 @@
 
 
            <!-- gantt js-->
-        <script src="assets/js/vendor/frappe-gantt.min.js"></script>
+        <script src="../../assets/js/vendor/frappe-gantt.min.js"></script>
 
         <!-- demo app -->
-        <script src="assets/js/pages/demo.project-gantt.js"></script>
+        <script src="../../assets/js/pages/demo.project-gantt.js"></script>
         <!-- end demo js-->
          <!-- end demo js-->
  
